Fix contrast issue for headline text

--- a/assests/css/mobile.css
+++ b/assests/css/mobile.css
@@ -78,6 +78,7 @@ img.navigation {
   line-height: 64px;
   letter-spacing: 0.37px;
   color: #ff6b00;
+  background-color: #050505;
 }
 
 .headline .primary-text {
@@ -108,6 +109,7 @@ h2.support-text,
 p.description {
   width: 327px;
   font-style: normal;
+  background-color: #050505;
 }
 
 h2.support-text,
